Refactor code in the html package.